# intx4.github.io

./: .gitignore  404.html  404.md  Cargo.toml  LICENSE  Makefile  README.md  _config.yml  feed.xml  index.html  intx4-github-io-a6d27af415edee5a.js  intx4-github-io-a6d27af415edee5a_bg.wasm  intx4_github_io-2721be177b744c4d_bg.wasm  intx4_github_io-5a7df314e2134a74.js  intx4_github_io-5a7df314e2134a74_bg.wasm  sitemap.xml  tailwind-91f9201ec5e3250f.css
.github/workflows/: continuos_deployment  continuos_deployment.yml  continuos_integration.yml
_bibliography/: papers.bib
_data/: repositories.yml
_includes/: header.html
_layouts/: about.html  bib.html  cv.html
_pages/: about.md  cv.md  dropdown.md  publications.md  recipes.md  repositories.md
_pages/dropdown/: index.html
_posts/: 2023-07-25-welcome-to-jekyll.markdown  2023-07-28-welcome-to-jekyll.markdown
_recipes/: cacio_pepe.md
_sass/: _themes.scss
_site/: 404.html  Dockerfile  docker-compose.yml  feed.xml  index.html  robots.txt  sitemap.xml
_site/blog/: index.html
_site/cv/: index.html
_site/projects/: index.html
_site/publications/: index.html
_site/recipes/: index.html
_site/repos/: index.html
assets/css/: main.css.map
assets/jupyter/: blog.ipynb.html
blog/: index.html
css/: styles.css
cv/: index.html
js/: scripts.js
material/: average_case_dp.md  differential_privacy.md
projects/1_project/: index.html
projects/2_project/: index.html
publications/: index.html
recipes/: index.html
repositories/: index.html
src/: app.rs  home.rs  main.rs  routes.rs  tailwind.css
(+96 files in other folders)
