[package]
name = "intx4_github_io"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = { version = "0.11.0", features = ["events", "utils"] }
web-sys = { version = "0.3.68", features = ["Navigator", "MediaQueryList"] }
serde_json = "1.0.115"
